# raccoon-websocket-service

./: .env.development  .env.development.sample  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
files/: entrypoint.sh
files/nginx/conf.d/: default.conf
files/nginx/snippets/: proxy.conf
src/: api.py  client.py  constants.py  internal.py  main.py  settings.py  util.py
src/websocket/: client.py  manager.py  service.py
src/websocket/handler/: base.py
src/websocket/handler/private/: balance.py  order.py
src/websocket/handler/public/: kline.py  ticker.py
